--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
     "description": "",
     "bin": "./index.js",
     "scripts": {
-      "build": "tsc"
+        "build": "tsc"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
-      "@types/node": "^14.14.35",
-      "esbuild": "^0.9.2",
-      "typescript": "^4.2.3"
+        "@types/node": "^14.14.35",
+        "@types/node-fetch": "^2.5.8",
+        "@types/yargs": "^16.0.0",
+        "esbuild": "^0.9.2",
+        "typescript": "^4.2.3"
+    },
+    "dependencies": {
+        "node-fetch": "^2.6.1",
+        "yargs": "^17.0.0-candidate.7"
     }
-  }
-  
+}
