fix: package name change

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "create",
-    "version": "1.0.0",
-    "description": "",
+    "name": "@npmcreate/create",
+    "version": "0.0.0",
+    "description": "configurable npm initializer",
     "bin": "./index.js",
     "scripts": {
         "build": "tsc"
