--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "@npmcreate/create",
     "version": "0.0.0",
     "description": "configurable npm initializer",
+    "files": [
+        "./index.js"
+    ],
     "bin": "./index.js",
     "scripts": {
         "build": "tsc"
